--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,11 @@ Text Domain:  Classic
 
 /*----------- 1. Body --------------*/
 
+
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 12px;
+
 }
 h2, .h2 {
 	font-size: 20px;
@@ -9429,9 +9431,15 @@ button.button span span {
 .top-banner-section .col {
 	float: none;
 	padding: 0px 0px;
+	background-size: cover;
+	height: 300px;
 }
 .add-banner1 {
-	background: url(../images/offer_banner1.png) no-repeat top left;
+	background-image: url(../images/silde/banner1.jpg);
+	background-repeat: no-repeat;
+	background-position: left top;
+	background-size: cover;
+	margin-right: 10px;
 }
 .add-banner1 strong {
 	font-size: 30px;
@@ -9444,9 +9452,15 @@ button.button span span {
 	text-align: center;
 	padding: 20% 0px!important;
 	font-size: 18px;
+	background-size: cover;
+	
 }
 .add-banner2 {
-	background: url(../images/offer_banner3.png) no-repeat top left;
+	background-image: url(../images/silde/banner2.jpg);
+	background-repeat: no-repeat;
+	background-position: left top;
+	background-size: cover;
+	margin-right: 10px;
 }
 .add-banner2 strong {
 	font-size: 30px;
@@ -9454,11 +9468,14 @@ button.button span span {
 	margin-bottom: 5px;
 }
 .free-shipping {
-	background: url(../images/shipping-bg.png) no-repeat top left;
 	color: #fff;
 	text-align: center;
 	padding: 20% 0px!important;
 	font-size: 18px;
+	background-image: url(../images/silde/banner3.png);
+	background-repeat: no-repeat;
+	background-position: left top;
+	margin-right: 10px;
 }
 .free-shipping strong {
 	font-size: 30px;
@@ -9466,11 +9483,13 @@ button.button span span {
 	margin-bottom: 5px;
 }
 .offer {
-	background: url(../images/offer-bg.png) no-repeat top left;
 	color: #fff;
 	text-align: center;
 	padding: 20% 0px!important;
 	font-size: 18px;
+	background-image: url(../images/silde/banner4.png);
+	background-repeat: no-repeat;
+	background-position: left top;
 }
 .offer strong {
 	font-size: 30px;
