--- a/css/style1.css
+++ b/css/style1.css
@@ -8414,6 +8414,7 @@ button.button.login:before {
 	background-color: #f0f0f0;
 	margin: 0px 0px 0px 0px;
 	padding: 25px 0px 25px 0px;
+	display: none;
 }
 .brand-logo .container {
 	padding: 0px 50px;
