--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@
 	border: 0;
 }
 
+.heading-form {
+	margin-bottom: 24px!important;
+	margin-top:0;
+}
+
 .product-desc {
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 14px;	
@@ -51,7 +56,34 @@
 	color: #777!important;
 }
 
-.upProduct-box { 
-	max-width: 800px;
-	margin: 0 auto;
+.upProduct-box {
+    max-width: 70%;
+    margin: 0 auto;
+    border-radius: 5px;
+    padding: 20px 28px 4px;
+    position: relative;
+	background-color: white;
+	z-index: 2;
+}
+
+.bg-dark {
+	background-color: #333;
+	opacity: 0.8;
+	position: absolute;
+	top:0;
+	left:0;
+	width: 100%;
+	height:100%;
+	z-index: 1;
+}
+
+.cancel-btn {
+	position: absolute;
+	top: 4px;
+	right: 4px;
+}
+
+.cancel-btn .btn-icon {
+	font-size: 35px;
+	color: #eee;	
 }
