--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@
 	color: #777!important;
 }
 
+/*UpProduct.php*/
 .upProduct-box {
     max-width: 70%;
     margin: 0 auto;
@@ -86,4 +87,14 @@
 .cancel-btn .btn-icon {
 	font-size: 35px;
 	color: #eee;	
+}
+
+/*Index.php*/
+li.item.item-animate.wide-first {
+    margin-left: 14px;
+}
+
+label.btn-search.glyphicon.glyphicon-search {
+    padding: 4px 12px;
+    cursor: pointer;
 }
