--- a/css/main.css
+++ b/css/main.css
@@ -98,3 +98,20 @@ label.btn-search.glyphicon.glyphicon-search {
     padding: 4px 12px;
     cursor: pointer;
 }
+
+.input-w-30 {
+	max-width: 30%;
+	margin-right: 40px;
+	margin-left: 10px;	
+}
+
+<!--Loading-->
+#load {
+	  background-image: url('./images/loading.gif') !important;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 20;
+  height: 100vh;
+  background-color: #f5f7f6;
+}
