--- a/css/main.css
+++ b/css/main.css
@@ -99,19 +99,30 @@ label.btn-search.glyphicon.glyphicon-search {
     cursor: pointer;
 }
 
-.input-w-30 {
+.input-name {
 	max-width: 30%;
-	margin-right: 40px;
-	margin-left: 10px;	
+	display:inline-block;
+	margin-right: 40px; 
 }
 
-<!--Loading-->
-#load {
-	  background-image: url('./images/loading.gif') !important;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 20;
-  height: 100vh;
-  background-color: #f5f7f6;
+
+.acc-signup-form {
+	max-width: 660px;
+	margin: 0 auto;
+}
+
+.btn-add-cart {
+	background-color: #f8f8f8;
+	color: #333;
+	height: 36px;
+	width: 39px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 2px;
+	cursor:pointer;
+}
+.btn-add-cart:hover {
+	background-color: #2ecc71;
+	color: white;	
 }
